# Projekty---studia

./: README.md
Pac-Man - Projekt/: CMakeLists.txt  EnemyUnits.cpp  EnemyUnits.h  GameStateController.cpp  GameStateController.h  HScore.cpp  HScore.h  PacManBoard.cpp  PacManBoard.h  Player.cpp  Player.h  SFMLController.cpp  SFMLController.h  SFMLView.cpp  SFMLView.h  Score.cpp  Score.h  TextDisplay.cpp  TextDisplay.h  WelcomeScreen.cpp  WelcomeScreen.h  main.cpp  map.txt
Saper - Projekt/: CMakeLists.txt  MSBoardTextView.cpp  MSBoardTextView.h  MSSFMLControllerEvent.cpp  MSSFMLControllerEvent.h  MSSFMLView.cpp  MSSFMLView.h  MSTextController.cpp  MSTextController.h  MinesweeperBoard.cpp  MinesweeperBoard.h  WelcomeScreen.cpp  WelcomeScreen.h  main.cpp
Snake - Projekt/: CMakeLists.txt  SBoard.cpp  SBoard.h  SFMLController.cpp  SFMLController.h  SFMLView.cpp  SFMLView.h  Score.cpp  Score.h  ScoreScreen.cpp  ScoreScreen.h  Snake.cpp  Snake.h  SnakeDisplay.cpp  SnakeDisplay.h  WelcomeScreen.cpp  WelcomeScreen.h  main.cpp
